--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,19 +6,19 @@ Date: 2024-08-20
 Authors@R: c(
   person("Mario", "Grassi", role = "aut", email="mario.grassi@unipv.it"),
   person("Barbara", "Tarantino", role = c("aut","cre"), email="barbara.tarantino01@universitadipavia.it"))
-Maintainer: Barbara Tarantino <barbara.tarantino01@universitadipavia.it>
 Description: Training and validation of a custom (or data-driven) Structural
     Equation Models using layer-wise Deep Neural Networks or node-wise
 	Machine Learning algorithms.
 Depends: SEMgraph (>= 1.2.2), igraph (>= 2.0.0), R (>= 4.0)
 Imports: cito, corpcor, lavaan, mgcv, NeuralNetTools, nnet, ranger,
         shapr, torch, xgboost
-License: GPL-3
+URL: https://github.com/BarbaraTarantino/SEMdeep
+License: GPL (>= 3)
 Encoding: UTF-8
 RoxygenNote: 7.3.2
 NeedsCompilation: no
-Repository: CRAN
 Author: Mario Grassi [aut],
   Barbara Tarantino [aut, cre]
-Packaged: 2024-08-22 08:12:47 UTC; mario
-
+Maintainer: Barbara Tarantino <barbara.tarantino01@universitadipavia.it>
+Repository: CRAN
+Packaged: 2024-09-01 10:32:10 UTC; mario
