--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,13 +5,13 @@ S3method(predict,ML)
 S3method(predict,SEM)
 export(SEMdnn)
 export(SEMml)
+export(benchmark)
 export(getConnectionWeight)
 export(getGradientWeight)
 export(getInputPvalue)
 export(getShapleyR2)
 export(mapGraph)
 export(nplot)
-export(performance)
 export(predict.DNN)
 export(predict.ML)
 export(predict.SEM)
@@ -32,8 +32,7 @@ importFrom(stats,predict)
 importFrom(stats,quantile)
 importFrom(stats,reshape)
 importFrom(stats,sd)
-importFrom(torch,cuda_is_available)
-importFrom(torch,install_torch)
+importFrom(torch,torch_is_installed)
 importFrom(utils,setTxtProgressBar)
 importFrom(utils,tail)
 importFrom(utils,txtProgressBar)
