--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,18 +1,16 @@
 Package: SEMdeep
-Title: Structural Equation Modeling with Deep Neural Network and
-        Machine Learning algorithms
-Version: 1.1.0
-Date: 2025-10-14
+Title: Structural Equation Modeling with Deep Neural Network and Machine Learning Algorithms
+Version: 1.1.1
+Date: 2025-12-03
 Authors@R: c(
   person("Mario", "Grassi", role="aut", email="mario.grassi@unipv.it"),
   person("Barbara", "Tarantino", role="cre", email="barbara.tarantino01@universitadipavia.it"))
 Description: Training and validation of a custom (or data-driven) Structural
-    Equation Models using layer-wise Deep Neural Networks or node-wise
-	Machine Learning algorithms, which extend the fitting procedures of
-	the	'SEMgraph' R package <doi:10.32614/CRAN.package.SEMgraph>.
+    Equation Models using Deep Neural Networks or Machine Learning algorithms, which
+	extend the fitting procedures of the 'SEMgraph' R package <doi:10.32614/CRAN.package.SEMgraph>.
 Depends: SEMgraph (>= 1.2.2), igraph (>= 2.0.0), R (>= 4.0)
-Imports: coro, corpcor, kernelshap, lavaan, NeuralNetTools, parabar,
-        progress, ranger, rpart, torch, xgboost
+Imports: coro, corpcor, kernelshap, lavaan, NeuralNetTools,
+         parabar, progress, ranger, rpart, torch, xgboost
 URL: https://github.com/BarbaraTarantino/SEMdeep
 License: GPL (>= 3)
 Encoding: UTF-8
@@ -22,4 +20,3 @@ Author: Mario Grassi [aut],
   Barbara Tarantino [cre]
 Maintainer: Barbara Tarantino <barbara.tarantino01@universitadipavia.it>
 Repository: CRAN
-Packaged: 2025-10-17 12:46:30 UTC; mario
