--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,6 +18,7 @@ export(nplot)
 export(predict.DNN)
 export(predict.ML)
 export(predict.SEM)
+export(trainingReport)
 import(SEMgraph)
 import(igraph)
 importFrom(grDevices,rgb)
@@ -29,8 +30,10 @@ importFrom(graphics,legend)
 importFrom(graphics,lines)
 importFrom(graphics,mtext)
 importFrom(graphics,par)
+importFrom(graphics,plot.new)
 importFrom(graphics,points)
 importFrom(graphics,polygon)
+importFrom(graphics,text)
 importFrom(stats,aggregate)
 importFrom(stats,as.formula)
 importFrom(stats,coef)
