--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -1,5 +1,8 @@
-pandoc: 3.6.3
-pkgdown: 2.1.3
+pandoc: '3.3'
+pkgdown: 2.2.0
 pkgdown_sha: ~
 articles: {}
-last_built: 2025-11-10T10:22Z
+last_built: 2025-12-05T13:50Z
+urls:
+  reference: https://BarbaraTarantino.github.io/SEMdeep/reference
+  article: https://BarbaraTarantino.github.io/SEMdeep/articles
